--- a/app/elements/cloud-add.html
+++ b/app/elements/cloud-add.html
@@ -43,17 +43,11 @@
                 <paper-dropdown-menu class="dropdown-block l6 xs12 dropdown-with-logos" label="Providers" horizontal-align="left">
                     <paper-menu attr-for-selected="value" selected="{{selectedProvider}}" class="dropdown-content">
                         <template is="dom-repeat" items="[[providersList]]" as="provider">
-                            <paper-item value="[[provider.val]]"><img src="[[_computeProviderLogo(provider.val)]]" width="24px" />[[provider.title]]</paper-item>
+                            <paper-item value="[[provider.val]]"><img src="[[_computeProviderLogo(provider.className)]]" width="24px" />[[provider.title]]</paper-item>
                         </template>
                     </paper-menu>
                 </paper-dropdown-menu>
             </div>
-
-            <!-- <div hidden$="[[selectedProvider]]">
-                <p>Do you want to reset it?
-                    <paper-button raised on-tap="_providerReset">Reset Provider</paper-button>
-                </p>
-            </div> -->
         </paper-material>
 
         <paper-material hidden$=[[!selectedProvider]]>
@@ -164,8 +158,8 @@
                 ready: function() {
 
                 },
-                _computeProviderLogo: function(provider) {
-                    return '../images/providers/provider-' + provider + '.png';
+                _computeProviderLogo: function(className) {
+                    return '../images/providers/' + className + '.png';
                 },
                 _computeProvidersList: function(fields) {
                     return fields;
